--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,6 +198,7 @@ exec --no-startup-id compton --backend glx --paint-on-overlay --glx-no-stencil -
 exec --no-startup-id dunst &
 exec --no-startup-id nm-applet &
 exec --no-startup-id xfce4-panel &
+exec --no-startup-id dropbox start -i &&
 exec firefox &
 
 exec xrandr --output HDMI-0 --left-of DVI-I-1 &
