--- a/.config/i3/config
+++ b/.config/i3/config
@@ -112,8 +112,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # screenshot
-bindsym --release Print exec scrot $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym --release Shift+Print exec scrot -s $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
+# bindsym --release Print exec scrot $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
+# bindsym --release Shift+Print exec scrot -s $HOME/Pictures/screenshot-$(date +%Y-%m-%d_%H-%M-%S).png
 
 bindsym $mod+n exec --no-startup-id thunar
 
@@ -138,6 +138,9 @@ mode "$mode_resize" {
 # custom hotkeys
 # bindsym $mod+Control+Left exec variety -p
 # bindsym $mod+Control+Right exec variety -n
+bindsym --release Print exec shutter -f
+bindsym --release Shift+Print exec shutter -w
+bindsym --release Control+Print exec shutter -s
 
 # fix graphics glitch
 new_window none
@@ -201,5 +204,7 @@ exec --no-startup-id xfce4-panel &
 exec --no-startup-id dropbox start -i &&
 exec firefox &
 
-exec xrandr --output HDMI-0 --left-of DVI-D-0 &
-exec feh --bg-scale ~/Pictures/barsl.jpg --bg-scale ~/Pictures/barsr.jpg &
+exec xrandr --output HDMI-0 --right-of DVI-D-0 &
+exec sudo cpupower frequency-set -g powersave &
+exec xfce4-power-manager &
+exec feh --bg-scale ~/Pictures/barsr.jpg --bg-scale ~/Pictures/barsl.jpg &
