added google play music desktop player

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -136,6 +136,8 @@ bindsym --release Print exec shutter -f
 bindsym --release Shift+Print exec shutter -w
 bindsym --release Control+Print exec shutter -s
 bindsym --release $mod+shift+e exec logout-menu
+bindsym --release $mod+y fullscreen disable; floating enable; resize set 600 340; sticky enable; exec xdotool key --clearmodifiers F2
+bindsym $mod+Shift+s sticky toggle
 
 # fix graphics glitch
 new_window none
@@ -157,6 +159,8 @@ for_window [title="Menu Update"] floating enable
 for_window [title="___"] floating enable
 for_window [title="Install user style"] floating enable
 for_window [title="File Operation Progress"] floating enable
+for_window [title="Google Play Music Desktop Player"] floating enable
+for_window [title="Google Play Music Desktop Player"] sticky enable
 
 # assign certain applications to a specific workspace
 assign [class="(?i)pidgin"]      $ws2
@@ -196,6 +200,7 @@ exec --no-startup-id compton --backend glx --paint-on-overlay --glx-no-stencil -
 exec --no-startup-id nm-applet &
 exec --no-startup-id xfce4-panel &
 exec --no-startup-id dropbox start -i &&
+exec --no-startup-id google-play-music-desktop-player &
 exec firefox &
 
 exec xrandr --output HDMI-0 --right-of DVI-D-0 &
