--- a/.config/i3/config
+++ b/.config/i3/config
@@ -136,7 +136,7 @@ bindsym --release Print exec shutter -f
 bindsym --release Shift+Print exec shutter -w
 bindsym --release Control+Print exec shutter -s
 bindsym --release $mod+shift+e exec logout-menu
-bindsym --release $mod+y fullscreen disable; floating enable; resize set 600 340; sticky enable; exec xdotool key --clearmodifiers F2
+bindsym --release $mod+y fullscreen disable; floating enable; resize set 600 340; sticky enable
 bindsym $mod+Shift+s sticky toggle
 
 # fix graphics glitch
