--- a/.config/Google Play Music Desktop Player/json_store/.settings.json
+++ b/.config/Google Play Music Desktop Player/json_store/.settings.json
@@ -6,15 +6,15 @@
     "uuid": "40dd6878-c724-493f-82a3-6c65de3b77a0",
     "maximized": false,
     "position": [
-        2742,
-        94
+        253,
+        93
     ],
     "size": [
         2206,
         1255
     ],
     "welcomed": "3.2.5",
-    "lastPage": "https://play.google.com/music/listen#/wms",
+    "lastPage": "https://play.google.com/music/listen#/now",
     "theme": true,
     "miniAlwaysOnTop": true,
     "hotkeys": {
