--- a/.config/i3/config
+++ b/.config/i3/config
@@ -199,11 +199,11 @@ exec xset s off &
 exec --no-startup-id compton --backend glx --paint-on-overlay --glx-no-stencil --unredir-if-possible & disown
 exec --no-startup-id nm-applet &
 exec --no-startup-id xfce4-panel &
-exec --no-startup-id dropbox start -i &&
-exec --no-startup-id google-play-music-desktop-player &
+exec --no-startup-id dropbox start -i &
+exec franz &
 exec firefox &
 
-exec xrandr --output HDMI-0 --left-of DP-0 &
+exec xrandr --output HDMI-0 --primary --left-of DP-0 &
 exec sudo cpupower frequency-set -g powersave &
 exec xfce4-power-manager &
 exec feh --bg-scale ~/Pictures/barsl.jpg --bg-scale ~/Pictures/barsr.jpg &
