ignoring the config file with the constantly changing location info

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 config.log
-.config/Google\ Play\ Music\ Desktop/.json_store/.settings.json
+.config/Google Play Music Desktop Player/json_store/.settings.json
