--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 Host ec2
 	HostName ec2-52-43-183-109.us-west-2.compute.amazonaws.com
 	User ec2-user
-	IdentityFile ~/projects/private/misc/my-key.pem
+	IdentityFile ~/.ssh/my-key.pem
 HOST cs1
 	HostName cs1.utdallas.edu
 	User arl150230
