--- a/.gitconfig
+++ b/.gitconfig
@@ -21,3 +21,5 @@
 	nevermind = !git reset --hard HEAD && git clean -d -f
 	graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %cr) %Cred%d' --date-order
 	precommit = diff --cached --diff-algorithm=minimal -w
+[http]
+	postBuffer = 157286400
