--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 Host ec2
 	HostName ec2-52-43-183-109.us-west-2.compute.amazonaws.com
-	User ec2-user
-	IdentityFile ~/.ssh/my-key.pem
+	User ubuntu
+	IdentityFile ~/.ssh/my-key-top-3.pem
 HOST cs1
 	HostName cs1.utdallas.edu
 	User arl150230
